--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+    scroll-behavior: smooth;
+
+  }
+
+  body{
+    padding: 0;
+    margin: 0;
+  }
+  *{
+    text-decoration: none;
+    box-sizing: border-box;
+  }
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
+@import 'primeicons/primeicons.css';
+
+@tailwind components;
+@tailwind utilities;
+
+@layer reset, primeng;
+
